Update tox file to test on django 1.8

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skipsdist = True
 commands =
 	pip install -e {toxinidir}
 	pip install -e {toxinidir}[tests]
-	py.test -vs --junitxml=junit-{envname}.xml --clearcache --cov {toxinidir}/barbeque --cov-config {toxinidir}/../.coveragerc --cov-report xml
+	py.test -vs --junitxml=junit-{envname}.xml --cache-clear --cov {toxinidir}/barbeque --cov-config {toxinidir}/.coveragerc --cov-report xml
 
 dependencies15 =
 	https://github.com/django/django/archive/stable/1.5.x.zip#egg=django
@@ -11,6 +11,8 @@ dependencies16 =
 	https://github.com/django/django/archive/stable/1.6.x.zip#egg=django
 dependencies17 =
 	https://github.com/django/django/archive/stable/1.7.x.zip#egg=django
+dependencies18 =
+	https://github.com/django/django/archive/stable/1.8.x.zip#egg=django
 
 [testenv:2.6-1.5.x]
 basepython = python2.6
@@ -37,6 +39,11 @@ basepython = python2.7
 deps =
 	{[testenv]dependencies17}
 
+[testenv:2.7-1.8.x]
+basepython = python2.7
+deps =
+	{[testenv]dependencies18}
+
 [testenv:3.4-1.6.x]
 basepython = python3.4
 deps =
@@ -47,6 +54,11 @@ basepython = python3.4
 deps =
 	{[testenv]dependencies17}
 
+[testenv:3.4-1.8.x]
+basepython = python3.4
+deps =
+	{[testenv]dependencies18}
+
 [testenv:pypy-1.6.x]
 basepython = pypy
 deps =
@@ -56,6 +68,11 @@ deps =
 basepython = pypy
 deps =
     {[testenv]dependencies17}
+
+[testenv:pypy-1.8.x]
+basepython = pypy
+deps =
+    {[testenv]dependencies18}
 
 [docs]
 commands =
