Update pytest.ini to support new pytest-cache version.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -vs --clearcache --tb=short --pep8 --flakes -p no:doctest
+addopts = -vs --cache-clear --tb=short --pep8 --flakes -p no:doctest
 
 norecursedirs = .tox
 python_files =
